# wasm-retro-gamekit

./: .gitignore  Cargo.toml  Makefile  NOTICE  README.md  package.json  retro-gamekit-bootstrap.js  retro-gamekit.js  rustfmt.toml
.github/workflows/: build-demo-bouncybox.yml  wasm-pack.yml  webpack-bouncybox.yml  webpack-gameoflife.yml
bouncybox/: 0.bootstrap.js  bootstrap.js  index_js.bootstrap.js
demos/bouncybox/: Cargo.toml  README.md
demos/bouncybox/src/: input.rs  js.rs  lib.rs
demos/bouncybox/www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
demos/gameoflife/: Cargo.toml  Makefile  README.md
demos/gameoflife/src/: cell.rs  game.rs  js.rs  lib.rs  painter.rs  universe.rs  world.rs
demos/gameoflife/www/: index.js  package-lock.json  package.json
gameoflife/: 0.bootstrap.js  bootstrap.js  index.html  index_js.bootstrap.js
src/: canvas.rs  game.rs  grid.rs  js.rs  lib.rs  num.rs  pair.rs
src/automata/: cell.rs  engine.rs  mod.rs  painter.rs  universe.rs
src/demos/: mod.rs
src/demos/automata/: cell.rs  mod.rs  painter.rs  universe.rs  world.rs
src/demos/bouncybox/: input.rs  mod.rs
src/display/: mod.rs
src/event/: events.rs  mod.rs  plumbing.rs  queue.rs
src/graphics/: mod.rs  palette.rs  parametric.rs  scene.rs  sprite.rs
src/grid/: hex.rs  mod.rs
src/input/: keyboard.rs  mod.rs  mouse.rs
src/js/: mod.rs  wasmbind.rs
src/life/: cell.rs  mod.rs  universe.rs
src/physics/: box2d.rs  identity.rs  mod.rs  universe.rs
src/vector/: v2.rs  vec2d.rs
tools/wrgedit/: Cargo.toml  Makefile
tools/wrgedit/src/: js.rs  lib.rs
tools/wrgedit/www/: index.html  index.js  package.json
wasm-retro-gamekit/: Cargo.toml
wasm-retro-gamekit/src/: display.rs  game.rs  lib.rs  num.rs
wasm-retro-gamekit/src/asset/: image.rs  mod.rs
wasm-retro-gamekit/src/assets/: image.rs
wasm-retro-gamekit/src/bins/: wrgconvert.rs  wrginspect.rs
wasm-retro-gamekit/src/compress/: mod.rs  rle.rs
wasm-retro-gamekit/src/display/: color.rs  frame.rs  mod.rs  window.rs
wasm-retro-gamekit/src/event/: events.rs  mod.rs
wasm-retro-gamekit/src/graphics/: color.rs  image.rs  mod.rs  parametric.rs  scene.rs  sprite.rs  viewport.rs
wasm-retro-gamekit/src/grid/: hex.rs
wasm-retro-gamekit/src/input/: keyboard.rs  keycodes.rs  mod.rs
wasm-retro-gamekit/src/js/: api.rs  display.rs  mod.rs  runner.rs
wasm-retro-gamekit/src/physics/: identity.rs  universe.rs
www/: index.html  index.js  package.json  retro-gamekit.js
