[package]
name = "wasm-game-of-life"
version = "0.1.0"
authors = ["Jerome Boisvert-Chouinard <me@jbchouinard.net>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7", optional = true }
rand = "0.8.5"
getrandom = { version = "0.2.10", features = [ "js" ] }
num = "0.4.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['-O4', '-g']
