[package]
name = "wasm-retro-gamekit"
version = "0.0.1"
description = "A toolkit for building browser games with Rust + WASM."
repository = "https://github.com/jbchouinard/wasm-retro-gamekit"
readme = "README.md"
authors = ["Jerome Boisvert-Chouinard <github@jbchouinard.net>"]
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
js = ["wasm-bindgen", "console_error_panic_hook"]

[dependencies]
num-traits = "0.2.15"
wasm-bindgen = { version = "0.2.84", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = 3

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['-O4', '-g']
