[package]
name = "wasm-retro-gamekit"
version = "0.0.1"
description = "A toolkit for building browser games with Rust + WASM."
repository = "https://github.com/jbchouinard/wasm-retro-gamekit"
readme = "README.md"
authors = ["Jerome Boisvert-Chouinard <github@jbchouinard.net>"]
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["js", "console-panic"]
console-events = ["web-sys", "web-sys/console", "wasm-bindgen"]
console-panic = ["console_error_panic_hook"]
js = ["wasm-bindgen"]

[dependencies]
num-traits = "0.2.15"
wasm-bindgen = { version = "0.2.84", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3.64", optional = true }
bincode = "2.0.0-rc.3"

[dev-dependencies]
rstest = "0.18.1"
wasm-bindgen-test = "0.3.34"
