[package]
name = "wasm-retro-gamekit-life"
description = "A demo game built with wasm-retro-gamekit."
repository = "https://github.com/jbchouinard/wasm-retro-gamekit"
readme = "../../README.md"
version = "0.1.0"
authors = ["Jerome Boisvert-Chouinard <github@jbchouinard.net>"]
license-file = "../../LICENSE"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
wasm-bindgen = "0.2.84"
# wasm-retro-gamekit = { git = "https://github.com/jbchouinard/wasm-retro-gamekit.git" }
wasm-retro-gamekit = { path = "../.." }
rand = "0.8.5"
getrandom = { version = "0.2.10", features = [ "js" ] }

[profile.release]
opt-level = 3

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['-O4', '-g']
